# top_3_product_research_automation_v1_crewai-project

./: README.md  pyproject.toml  requirements.txt  setup.py
src/top_3_product_research_automation/: app.py  crew.py  main.py
src/top_3_product_research_automation/config/: agents.yaml  tasks.yaml
src/top_3_product_research_automation/reports/: top_products_report_20251102_102312.md  top_products_report_20251102_102650.md  top_products_report_20251102_104725.md  top_products_report_20251102_105157.md
