[project]
name = "top_3_product_research_automation"
version = "0.1.0"
description = "top_3_product_research_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "fpdf>=1.7.2",
    "markdown>=3.0.0",
    "beautifulsoup4>=4.0.0"
]

[project.scripts]
top_3_product_research_automation = "top_3_product_research_automation.main:run"
run_crew = "top_3_product_research_automation.main:run"
train = "top_3_product_research_automation.main:train"
replay = "top_3_product_research_automation.main:replay"
test = "top_3_product_research_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
